2023-04-20  Jacob Bachmeyer  <jcb@gnu.org>

	PR62982

	Initial report:  Christoph Muellner <christoph.muellner@vrull.eu>

	* runtest.exp (restore_cmd_vars): Fix handling of values
	containing whitespace, which are treated as multiple-element
	lists and disrupt the eval implied by uplevel here.

	* testsuite/runtest.main/options.exp: Add PR62982 regression test.
	Improve tests for --target_board option by checking reported
	target list instead of relying on actually running targets for
	which no description file exists.

	* testsuite/runtest.main/options.exp: Change argument lists for
	test cases to conventional Tcl list notation using braces.

2023-04-18  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.main/options.exp: Adjust pattern matched in
	--objdir test to require the objdir given on the command line to
	remain in force immediately after the local init file is loaded.

2022-12-20  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu.h (totals, TestState::totals): Change "real failed" to
	"failed" when listing number of failed tests.
	* testsuite/libdejagnu/harness.exp (test_libdejagnu_unit): Update
	to match above change.

	* dejagnu.h (DG_error, DG_warning): New functions.
	(TestState::error, TestState::warning): New methods.
	* doc/dejagnu.texi (C unit testing API): Document new functions.
	(C++ unit testing API): Document new methods and fix an error:
	TestState::unsupported does not take varargs.
	* testsuite/libdejagnu/unit-c.c (main): Add support for testing
	errors and warnings.
	* testsuite/libdejagnu/unit-cxx.cxx (main): Likewise.
	* testsuite/libdejagnu/unit-ccxxmix.cxx (main): Likewise.
	* testsuite/libdejagnu/harness.exp: Add tests.
	(test_libdejagnu_unit): Add support for ERROR and WARNING tokens.

	* doc/dejagnu.texi (DejaGnu unit test protocol): Add ERROR and
	WARNING tokens to DejaGnu unit testing protocol.
	* lib/dejagnu.exp (host_execute): Implement same.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.exp,